--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 .expo/
 
 # dependencies
-/node_modules
+node_modules
 
 # misc
 .env.local
@@ -15,3 +15,5 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+yarn.lock
+package-lock.json
