--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
     "react-native-fontawesome": "^5.7.0",
+    "react-native-super-grid": "^2.4.1",
     "react-navigation": "^2.0.2",
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
