--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "tsc": "tsc",
     "clean": "rimraf build",
     "build": "yarn run clean && yarn run tsc --",
-    "watch": "yarn run build -- -w",
+    "watch": " yarn run tsc -- -w",
+    "watchAndBuild": "yarn run build -- -w",
     "watchAndRunAndroid": "concurrently \"yarn run watch\" \"yarn run android\"",
     "buildRunAndroid": "yarn run build && yarn run watchAndRunAndroid ",
     "watchAndRunIOS": "concurrently \"yarn run watch\" \"yarn run ios\"",
