--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
 		"@types/redux": "^3.6.0",
 		"@types/redux-logger": "^3.0.6",
 		"concurrently": "^3.6.0",
+		"husky": "0.14.3",
 		"jest-expo": "~27.0.0",
+		"lint-staged": "^7.2.0",
+		"prettier": "^1.14.0",
 		"react-native-scripts": "1.14.0",
 		"react-native-typescript-transformer": "^1.2.10",
 		"react-test-renderer": "16.3.1",
@@ -40,9 +43,8 @@
 		"buildRunIOS": "yarn run build && yarn run watchAndRunIOS ",
 		"watchAndStart": "concurrently \"yarn run watch\" \"yarn run start\"",
 		"buildAndStart": "yarn run build && yarn run watchAndStart ",
-		"format": "prettier --write --list-different --config ./.prettierrc '{src,scripts,tests}/**/*.{js,json,ts,css,less,scss,md}'",
 		"precommit": "lint-staged",
-		"lint": "eslint src/"
+		"format": "prettier --write --list-different --config ./.prettierrc '{src,scripts,tests}/**/*.{js,ts,json,css,less,scss,md}'"
 	},
 	"jest": {
 		"preset": "react-native",
@@ -80,5 +82,11 @@
 		"redux": "^4.0.0",
 		"redux-logger": "^3.0.6",
 		"tslint": "^5.11.0"
+	},
+	"lint-staged": {
+		"*.{js,ts,json,css,less,scss,md}": [
+			"prettier --write",
+			"git add"
+		]
 	}
 }
