--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "expo": "^28.0.0",
     "firebase": "^4.12.0",
     "lodash": "^4.17.10",
+    "normalizr": "^3.2.4",
     "prop-types": "^15.6.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
@@ -76,6 +77,7 @@
     "react-redux": "^5.0.7",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^5.10.0",
     "tslint": "^5.11.0"
   }
 }
