--- a/.babelrc
+++ b/.babelrc
@@ -2,19 +2,21 @@
 	"presets": ["babel-preset-expo"],
 	"env": {
 		"development": {
-			"plugins": [
-				"transform-react-jsx-source",
-				"module-resolver",
-				{
-					"alias": {
-						"Parser": "./api/parsers",
-						"Module": "~/src/modules",
-						"Interfaces": "./api/interfaces",
-						"UI": "./ui/components",
-						"Styles": "./ui/styles"
-					}
-				}
-			]
+			"plugins": ["transform-react-jsx-source"]
 		}
-	}
+	},
+	"plugins": [
+		[
+			"module-resolver",
+			{
+				"alias": {
+					"Parser": "./api/parsers",
+					"Module": "./modules",
+					"Interfaces": "./api/interfaces",
+					"UI": "./ui/components",
+					"Styles": "./ui/styles"
+				}
+			}
+		]
+	]
 }
