--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
 		"react-native-snap-carousel": "^3.7.2",
 		"react-native-super-grid": "^2.4.1",
 		"react-navigation": "^2.0.2",
+		"react-navigation-fluid-transitions": "^0.2.2",
 		"react-redux": "^5.0.7",
 		"redux": "^4.0.0",
 		"redux-logger": "^3.0.6",
