--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"expo": "^28.0.0",
 		"firebase": "^4.12.0",
 		"lodash": "^4.17.10",
+		"moment": "^2.22.2",
 		"prop-types": "^15.6.1",
 		"react": "16.3.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
