--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
 		"expo": "^28.0.0",
 		"firebase": "^4.12.0",
 		"lodash": "^4.17.10",
+		"moment": "^2.22.2",
 		"prop-types": "^15.6.1",
 		"react": "16.3.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
@@ -76,6 +77,7 @@
 		"react-native-snap-carousel": "^3.7.2",
 		"react-native-super-grid": "^2.4.1",
 		"react-navigation": "^2.0.2",
+		"react-navigation-fluid-transitions": "^0.2.2",
 		"react-redux": "^5.0.7",
 		"redux": "^4.0.0",
 		"redux-logger": "^3.0.6",
