--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
 		"axios": "^0.18.0",
 		"crypto-js": "^3.1.9-1",
 		"expo": "^28.0.0",
-		"firebase": "^4.12.0",
+		"firebase": "5.4.0",
 		"lodash": "^4.17.10",
 		"moment": "^2.22.2",
 		"prop-types": "^15.6.1",
