--- a/package.json
+++ b/package.json
@@ -66,9 +66,10 @@
 		"axios": "^0.18.0",
 		"crypto-js": "^3.1.9-1",
 		"expo": "^28.0.0",
-		"firebase": "5.4.0",
+		"firebase": "5.3.0",
 		"lodash": "^4.17.10",
 		"moment": "^2.22.2",
+		"p-queue": "^2.4.2",
 		"prop-types": "^15.6.1",
 		"react": "16.3.1",
 		"react-native": "https://github.com/expo/react-native/archive/sdk-27.0.0.tar.gz",
